[gd_scene load_steps=25 format=3 uid="uid://cloj7m8kv6hfm"]

[ext_resource type="Script" path="res://Enemies/Globin/Globin.gd" id="1_wdbc2"]
[ext_resource type="Texture2D" uid="uid://cpad5ma3taaa8" path="res://Assets/Enemies/Globin/Animations/attack1.png" id="2_vs6ka"]
[ext_resource type="Texture2D" uid="uid://biycnq8h03t8o" path="res://Assets/Enemies/Globin/Animations/attack2.png" id="3_a7tye"]
[ext_resource type="Texture2D" uid="uid://bbj8qkvfv7xvc" path="res://Assets/Enemies/Globin/Animations/attack3.png" id="4_x484a"]
[ext_resource type="Texture2D" uid="uid://cp3alh6f0vqnh" path="res://Assets/Enemies/Globin/Animations/attack4.png" id="5_yjb6y"]
[ext_resource type="Texture2D" uid="uid://ggfvqerscbhc" path="res://Assets/Enemies/Globin/Animations/attack5.png" id="6_xaj4y"]
[ext_resource type="Texture2D" uid="uid://de8hxec7x5xj3" path="res://Assets/Enemies/Globin/Animations/death1.png" id="7_dg8du"]
[ext_resource type="Script" path="res://Enemies/Globin/Damagable.gd" id="8_mdfi1"]
[ext_resource type="Texture2D" uid="uid://dxyn577vl815j" path="res://Assets/Enemies/Globin/Animations/death2.png" id="8_w6rrs"]
[ext_resource type="Texture2D" uid="uid://bvegvie5ynjn1" path="res://Assets/Enemies/Globin/Animations/death3.png" id="9_gkns1"]
[ext_resource type="Texture2D" uid="uid://cqkdeqfsi3bfk" path="res://Assets/Enemies/Globin/Animations/death4.png" id="10_c16xn"]
[ext_resource type="Texture2D" uid="uid://0ge6vgdjk1hf" path="res://Assets/Enemies/Globin/Animations/hurt1.png" id="11_q1kpq"]
[ext_resource type="Texture2D" uid="uid://cgmcag5eohrdq" path="res://Assets/Enemies/Globin/Animations/hurt2.png" id="12_215cg"]
[ext_resource type="Texture2D" uid="uid://cq80aaeeqdgx3" path="res://Assets/Enemies/Globin/Animations/hurt3.png" id="13_6qwlk"]
[ext_resource type="Texture2D" uid="uid://b3e8jr47m7s4g" path="res://Assets/Enemies/Globin/Animations/walk1.png" id="14_a2n35"]
[ext_resource type="Texture2D" uid="uid://bv2cg4bgwua3a" path="res://Assets/Enemies/Globin/Animations/walk2.png" id="15_4n8lf"]
[ext_resource type="Texture2D" uid="uid://dmnq02w523ami" path="res://Assets/Enemies/Globin/Animations/walk3.png" id="16_ulgfe"]
[ext_resource type="Texture2D" uid="uid://s0qdsgh8vh37" path="res://Assets/Enemies/Globin/Animations/walk4.png" id="17_6mvk6"]
[ext_resource type="Texture2D" uid="uid://psim4q1hplt7" path="res://Assets/Enemies/Globin/Animations/walk5.png" id="18_8cpb3"]
[ext_resource type="Texture2D" uid="uid://dmcilg7lh0bom" path="res://Assets/Enemies/Globin/Animations/walk6.png" id="19_nga4h"]
[ext_resource type="AudioStream" uid="uid://cincyx5e4fvys" path="res://Assets/Enemies/Globin/Sounds/Socapex - hurt.wav" id="21_7yyeb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uw4d1"]
size = Vector2(1.55872, 1.8)

[sub_resource type="SpriteFrames" id="SpriteFrames_qpvnw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vs6ka")
}, {
"duration": 1.0,
"texture": ExtResource("3_a7tye")
}, {
"duration": 1.0,
"texture": ExtResource("4_x484a")
}, {
"duration": 1.0,
"texture": ExtResource("5_yjb6y")
}, {
"duration": 1.0,
"texture": ExtResource("6_xaj4y")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_dg8du")
}, {
"duration": 1.0,
"texture": ExtResource("8_w6rrs")
}, {
"duration": 1.0,
"texture": ExtResource("9_gkns1")
}, {
"duration": 1.0,
"texture": ExtResource("10_c16xn")
}],
"loop": false,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_q1kpq")
}, {
"duration": 1.0,
"texture": ExtResource("12_215cg")
}, {
"duration": 1.0,
"texture": ExtResource("13_6qwlk")
}],
"loop": false,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_a2n35")
}, {
"duration": 1.0,
"texture": ExtResource("15_4n8lf")
}, {
"duration": 1.0,
"texture": ExtResource("16_ulgfe")
}, {
"duration": 1.0,
"texture": ExtResource("17_6mvk6")
}, {
"duration": 1.0,
"texture": ExtResource("18_8cpb3")
}, {
"duration": 1.0,
"texture": ExtResource("19_nga4h")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysjxv"]
size = Vector2(88, 17)

[node name="Globin" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_wdbc2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.29727e-05, -1.49999)
rotation = 1.5708
scale = Vector2(30.153, 30)
shape = SubResource("RectangleShape2D_uw4d1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qpvnw")
animation = &"Attack"
autoplay = "Walk"
flip_h = true

[node name="WorldDetector" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(-1, 0)
scale = Vector2(1, 14)
target_position = Vector2(-86, 0)
collision_mask = 2

[node name="GroundDetector" type="RayCast2D" parent="."]
scale = Vector2(1.68, 1.68)
target_position = Vector2(0, 44)
collision_mask = 6

[node name="Damageable" type="Node" parent="."]
script = ExtResource("8_mdfi1")

[node name="Weapon" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon"]
position = Vector2(-23, 0.5)
shape = SubResource("RectangleShape2D_ysjxv")

[node name="PlayerDetectorLeft" type="RayCast2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(1, 14)
target_position = Vector2(-150, 0)

[node name="PlayerDetectorRight" type="RayCast2D" parent="."]
position = Vector2(4, 0)
scale = Vector2(1, 14)
target_position = Vector2(150, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_7yyeb")
volume_db = 2.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Weapon" to="." method="_on_area_2d_body_entered"]
